--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "checks": "pnpm lint && pnpm typecheck"
   },
   "peerDependencies": {
+    "valibot": "^1.0.0",
     "vite": "^2.9.0 || ^3.0.0-0 || ^4.0.0 || ^5.0.0 || ^6.0.0",
     "zod": "^3.0.0"
   },
@@ -91,6 +92,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "unbuild": "^2.0.0",
+    "valibot": "1.0.0-beta.9",
     "vite": "^6.0.1",
     "zod": "^3.23.8"
   },
